--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,70 +20,12 @@
 
 
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 
 <body>
 
 	<div id="fb-root"></div>
-	<script>
-
-	function statusChangeCallback(response) {
-		console.log('statusChangeCallback');
-		console.log(response);
-		// The response object is returned with a status field that lets the
-		// app know the current login status of the person.
-		// Full docs on the response object can be found in the documentation
-		// for FB.getLoginStatus().
-		if (response.status === 'connected') {
-			// Logged into your app and Facebook.
-			//testAPI();
-			console.log('connected');
-			console.log(response.authResponse.accessToken);
-			
-		} else if (response.status === 'not_authorized') {
-			console.log('not_authorized');
-			// The person is logged into Facebook, but not your app.
-			document.getElementById('status').innerHTML = 'Please log '
-					+ 'into this app.';
-		} else {
-			console.log('other');
-			// The person is not logged into Facebook, so we're not sure if
-			// they are logged into this app or not.
-			document.getElementById('status').innerHTML = 'Please log '
-					+ 'into Facebook.';
-		}
-	}
-	
-	function customLoginHandler() {
-		alert("logged in")
-		console.info("doing login")
-		FB.getLoginStatus(function(response) {
-			statusChangeCallback(response);
-		});
-		console.info("done login")
-	}
-
-	
-
-	
-	(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id))
-			return;
-		js = d.createElement(s);
-		js.id = id;
-		js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5&appId=224674001213541";
-		fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));
-	</script>
-
-
-
 
 
 	<div class="site-wrapper">
@@ -115,10 +57,31 @@
 
 					<p class="lead">Facebook login</p>
 
-					<div class="fb-login-button" data-max-rows="1" data-size="large"
-						data-show-faces="false" data-auto-logout-link="true"
-						onlogin="customLoginHandler();"></div>
+					<div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false"
+						data-auto-logout-link="true" onlogin="customLoginHandler();"></div>
 					<div id="status"></div>
+
+					<div id="example"></div>
+
+
+					<div id="excercises-app">
+						<ul class="excercises-list"></ul>
+
+						<div class="excercise-create">
+							<b>Add a excercise</b> <label>Name: <input id="excercise-name" type="text"></label>
+							<button class="btn btn-lg btn-default">Create Excecise</button>
+
+						</div>
+					</div>
+
+					<script type="text/template" id="excercise-item-tmpl">
+  <p><a href="/training/webapi/excercise/<%= name %>"><%= name %></a></p>
+  <button class="remove">x</button>
+</script>
+
+
+
+
 				</div>
 				<div class="mastfoot">
 					<div class="inner">
@@ -134,13 +97,20 @@
 
 	</div>
 
+
+
+
+
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 	<script src="lib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
-
+	<script src="lib/underscore/underscore.js"></script>
+	<script src="lib/backbone/backbone.js"></script>
+	<script src="js/facebook.js"></script>
+	<script src="js/hellobackbone.js"></script>
+	<script src="js/execercise-app.js"></script>
 </body>
 </html>
