Added % calculator page

--- a/src/main/webapp/calculators.html
+++ b/src/main/webapp/calculators.html
@@ -71,24 +71,126 @@
 		<!-- /.row -->
 
 
-		<div class="row">
-			<div class="col-md-6 col-sm-12">
-				<p class="lead">Facebook login</p>
 
-				<div class="fb-login-button" data-max-rows="1" data-size="large"
-					data-show-faces="false" data-auto-logout-link="true"
-					onlogin="customLoginHandler();"
-					data-scope="basic_info,public_profile,email"></div>
-				<div id="status"></div>
+
+
+		<div class="row">
+
+			<div class="col-lg-6">
+
+
+				<div class="panel panel-default">
+					<!-- Default panel contents -->
+					<div class="panel-heading">Training Percentages</div>
+
+
+
+					<div class="panel-body">
+						<p>Enter your max to calculate commonly used training
+							percentages:</p>
+					</div>
+
+					<!-- 		<span id="maxLiftStatusIntial" class="label label-default" hidden="false">Enter Max</span> <span
+						id="maxLiftStatusSuccess" class="label label-success" hidden="true">Success</span> <span
+						id="maxLiftStatusError" class="label label-danger" hidden="true">Error</span>
+						
+						 -->
+					<!-- Table -->
+					<table class="table">
+						<tr>
+							<td>100</td>
+							<td>
+								<div class="form-group">
+									<div class="input-group">
+										<input id="maxLiftTextBox" type="text" class="form-control"
+											aria-label="Max lift in kg"> <span
+											class="input-group-addon">kg</span>
+									</div>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>98</td>
+							<td id="maxLift98"></td>
+
+						</tr>
+
+						<tr>
+							<td>97</td>
+							<td id="maxLift97"></td>
+						</tr>
+
+
+						<tr>
+							<td>95</td>
+							<td id="maxLift95"></td>
+						</tr>
+
+						<tr>
+							<td>92</td>
+							<td id="maxLift92"></td>
+						</tr>
+
+						<tr>
+							<td>90</td>
+							<td id="maxLift90"></td>
+						</tr>
+
+						<tr>
+							<td>87</td>
+							<td id="maxLift87"></td>
+						</tr>
+
+						<tr>
+							<td>85</td>
+							<td id="maxLift85"></td>
+						</tr>
+
+						<tr>
+							<td>82</td>
+							<td id="maxLift82"></td>
+						</tr>
+
+						<tr>
+							<td>80</td>
+							<td id="maxLift80"></td>
+						</tr>
+						
+						<tr>
+							<td>75</td>
+							<td id="maxLift75"></td>
+						</tr>
+
+						<tr>
+							<td>70</td>
+							<td id="maxLift70"></td>
+						</tr>
+
+						<tr>
+							<td>60</td>
+							<td id="maxLift60"></td>
+						</tr>
+
+					</table>
+				</div>
+
+
+
+
 			</div>
+			<!-- /.col-lg-6 -->
+
+
 		</div>
 		<!-- /.row -->
 
 
-
-
 	</div>
 	<!-- /.container -->
+
+
+
 
 
 
@@ -116,9 +218,11 @@
 	<script src="js/bootstrap.min.js"></script>
 
 
-	<script src="js/facebook.js"></script>
+	<!--<script src="js/facebook.js"></script> -->
 
 	<!-- 	<script src="js/execercise-app.js"></script> -->
+
+	<script src="js/calculators.js"></script>
 
 
 
