--- a/src/main/webapp/calculators.html
+++ b/src/main/webapp/calculators.html
@@ -64,130 +64,174 @@
 	<!-- Page Content -->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6 col-sm-12">
-				<h1>Training</h1>
+			<div class="col-md-12">
+				<h1>
+					Training<small> loads calculator</small>
+				</h1>
 			</div>
 		</div>
 		<!-- /.row -->
+
+
+		<div class="row">
+
+			<div class="col-md-2 col-sm-2 col-xs-2">
+				<div class="form-group">
+					<div class="input-group">
+						<input id="maxLiftTextBox" type="text" class="form-control"
+							aria-label="Max lift in kg">
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">100%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift100" class="badge"></span>
+			</div>
+		</div>
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">98%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift98" class="badge"></span>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">97%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+
+				<span id="maxLift97" class="badge"></span>
+
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">95%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift95" class="badge"></span>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">92%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift92" class="badge"></span>
+			</div>
+		</div>
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">90%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift90" class="badge"></span>
+			</div>
+		</div>
+
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">87%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift87" class="badge"></span>
+			</div>
+		</div>
 
 
 
 
 
 		<div class="row">
-
-			<div class="col-lg-6">
-
-
-				<div class="panel panel-default">
-					<!-- Default panel contents -->
-					<div class="panel-heading">Training Percentages</div>
-
-
-
-					<div class="panel-body">
-						<p>Enter your max to calculate commonly used training
-							percentages:</p>
-					</div>
-
-					<!-- 		<span id="maxLiftStatusIntial" class="label label-default" hidden="false">Enter Max</span> <span
-						id="maxLiftStatusSuccess" class="label label-success" hidden="true">Success</span> <span
-						id="maxLiftStatusError" class="label label-danger" hidden="true">Error</span>
-						
-						 -->
-					<!-- Table -->
-					<table class="table">
-						<tr>
-							<td>100</td>
-							<td>
-								<div class="form-group">
-									<div class="input-group">
-										<input id="maxLiftTextBox" type="text" class="form-control"
-											aria-label="Max lift in kg"> <span
-											class="input-group-addon">kg</span>
-									</div>
-								</div>
-							</td>
-						</tr>
-
-						<tr>
-							<td>98</td>
-							<td id="maxLift98"></td>
-
-						</tr>
-
-						<tr>
-							<td>97</td>
-							<td id="maxLift97"></td>
-						</tr>
-
-
-						<tr>
-							<td>95</td>
-							<td id="maxLift95"></td>
-						</tr>
-
-						<tr>
-							<td>92</td>
-							<td id="maxLift92"></td>
-						</tr>
-
-						<tr>
-							<td>90</td>
-							<td id="maxLift90"></td>
-						</tr>
-
-						<tr>
-							<td>87</td>
-							<td id="maxLift87"></td>
-						</tr>
-
-						<tr>
-							<td>85</td>
-							<td id="maxLift85"></td>
-						</tr>
-
-						<tr>
-							<td>82</td>
-							<td id="maxLift82"></td>
-						</tr>
-
-						<tr>
-							<td>80</td>
-							<td id="maxLift80"></td>
-						</tr>
-						
-						<tr>
-							<td>75</td>
-							<td id="maxLift75"></td>
-						</tr>
-
-						<tr>
-							<td>70</td>
-							<td id="maxLift70"></td>
-						</tr>
-
-						<tr>
-							<td>60</td>
-							<td id="maxLift60"></td>
-						</tr>
-
-					</table>
-				</div>
-
-
-
-
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">85%</p>
 			</div>
-			<!-- /.col-lg-6 -->
-
-
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift85" class="badge"></span>
+			</div>
 		</div>
-		<!-- /.row -->
 
+
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">82%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift82" class="badge"></span>
+			</div>
+		</div>
+
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">80%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift80" class="badge"></span>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">75%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift75" class="badge"></span>
+			</div>
+		</div>
+
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">70%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift70" class="badge"></span>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<p class="badge">60%</p>
+			</div>
+			<div class="col-md-1 col-sm-1 col-xs-1">
+				<span id="maxLift60" class="badge"></span>
+			</div>
+		</div>
 
 	</div>
-	<!-- /.container -->
+
+
+
+
+
+
+
+
+
+
 
 
 
