--- a/src/main/webapp/calculators.html
+++ b/src/main/webapp/calculators.html
@@ -73,45 +73,59 @@
 		<!-- /.row -->
 
 
+
+		<div class="row">&nbsp;</div>
+
+		<div class="row"></div>
+
+		<div class="row">&nbsp;</div>
+
+
 		<div class="row">
 
-			<div class="col-md-4 col-sm-4 col-xs-4">
-				<div class="form-group">
-					<div class="input-group">
-						<input id="maxLiftTextBox" type="text" class="form-control"
-							aria-label="Max lift in kg">
+			<div class="col-md-6">
+
+				<form class="form-inline">
+
+					<div class="form-group">
+						<input type="number" class="form-control" id="maxLiftTextBox"
+							placeholder="100">
 					</div>
-				</div>
+					<button type="submit" class="btn btn-default">Reset</button>
+				</form>
+
 			</div>
 		</div>
 
 
+		<div class="row">&nbsp;</div>
+
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">100%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift100" class="badge"></span>
 			</div>
 		</div>
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">98%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift98" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">97%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 
 				<span id="maxLift97" class="badge"></span>
 
@@ -119,29 +133,29 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">95%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift95" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">92%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift92" class="badge"></span>
 			</div>
 		</div>
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">90%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift90" class="badge"></span>
 			</div>
 		</div>
@@ -149,10 +163,10 @@
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">87%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift87" class="badge"></span>
 			</div>
 		</div>
@@ -162,10 +176,10 @@
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">85%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift85" class="badge"></span>
 			</div>
 		</div>
@@ -174,10 +188,10 @@
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">82%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift82" class="badge"></span>
 			</div>
 		</div>
@@ -185,38 +199,38 @@
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">80%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift80" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">75%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift75" class="badge"></span>
 			</div>
 		</div>
 
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">70%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift70" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<p class="badge">60%</p>
 			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+			<div class="col-md-6">
 				<span id="maxLift60" class="badge"></span>
 			</div>
 		</div>
@@ -267,9 +281,5 @@
 	<!-- 	<script src="js/execercise-app.js"></script> -->
 
 	<script src="js/calculators.js"></script>
-
-
-
-
 </body>
 </html>
