--- a/src/main/webapp/calculators.html
+++ b/src/main/webapp/calculators.html
@@ -83,7 +83,7 @@
 
 		<div class="row">
 
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 
 				<form class="form-inline">
 
@@ -91,7 +91,7 @@
 						<input type="number" class="form-control" id="maxLiftTextBox"
 							placeholder="100">
 					</div>
-					<button type="submit" class="btn btn-default">Reset</button>
+					<button type="reset" class="btn btn-default">Reset</button>
 				</form>
 
 			</div>
@@ -103,29 +103,29 @@
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">100%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift100" class="badge"></span>
 			</div>
 		</div>
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">98%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift98" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">97%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 
 				<span id="maxLift97" class="badge"></span>
 
@@ -133,29 +133,29 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">95%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift95" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">92%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift92" class="badge"></span>
 			</div>
 		</div>
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">90%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift90" class="badge"></span>
 			</div>
 		</div>
@@ -163,10 +163,10 @@
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">87%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift87" class="badge"></span>
 			</div>
 		</div>
@@ -176,10 +176,10 @@
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">85%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift85" class="badge"></span>
 			</div>
 		</div>
@@ -188,10 +188,10 @@
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">82%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift82" class="badge"></span>
 			</div>
 		</div>
@@ -199,38 +199,38 @@
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">80%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift80" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">75%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift75" class="badge"></span>
 			</div>
 		</div>
 
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">70%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift70" class="badge"></span>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<p class="badge">60%</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-3">
 				<span id="maxLift60" class="badge"></span>
 			</div>
 		</div>
