--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,6 +54,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="about.html">About</a></li>
 					<li><a href="calculators.html">Calculators</a></li>
+					<li><a href="log.html">Log</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
