--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -67,7 +67,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h1>
-					Training<small> loads calculator</small>
+					Training<small> log</small>
 				</h1>
 			</div>
 		</div>
@@ -84,18 +84,41 @@
 
 		<div class="row">
 
-			<div class="col-md-6 col-xs-3">
 
-				<form class="form-inline">
 
-					<div class="form-group">
-						<input type="number" class="form-control" id="maxLiftTextBox"
-							placeholder="100">
-					</div>
+			<form class="form-inline">
+
+				<div class="col-md-6 col-xs-3">
+
+					<!-- 	<div class="form-group"> -->
+					<input type="number" class="form-control" id="weightTextBox"
+						placeholder="100">
+					<!-- 	</div> -->
+
+
+				</div>
+
+
+				<div class="col-md-6 col-xs-3">
+
+					<!-- 	<div class="form-group"> -->
+					<input type="number" class="form-control" id="repsTextBox"
+						placeholder="2">
+					<!-- 	</div> -->
+
+
+				</div>
+
+				<div class="col-md-6 col-xs-3">
 					<button type="reset" class="btn btn-default">Reset</button>
-				</form>
 
-			</div>
+				</div>
+
+			</form>
+
+
+
+
 		</div>
 
 
@@ -103,138 +126,8 @@
 
 
 
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">100%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift100" class="badge"></span>
-			</div>
-		</div>
 
 
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">98%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift98" class="badge"></span>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">97%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-
-				<span id="maxLift97" class="badge"></span>
-
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">95%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift95" class="badge"></span>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">92%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift92" class="badge"></span>
-			</div>
-		</div>
-
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">90%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift90" class="badge"></span>
-			</div>
-		</div>
-
-
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">87%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift87" class="badge"></span>
-			</div>
-		</div>
-
-
-
-
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">85%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift85" class="badge"></span>
-			</div>
-		</div>
-
-
-
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">82%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift82" class="badge"></span>
-			</div>
-		</div>
-
-
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">80%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift80" class="badge"></span>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">75%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift75" class="badge"></span>
-			</div>
-		</div>
-
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">70%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift70" class="badge"></span>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6 col-xs-3">
-				<p class="badge">60%</p>
-			</div>
-			<div class="col-md-6 col-xs-3">
-				<span id="maxLift60" class="badge"></span>
-			</div>
-		</div>
 
 	</div>
 
