Started to work on login

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,29 @@
 
 
 
+		<div class="row">
+			<div class="col-md-6 col-xs-3">
+				<p class="badge">Username</p>
+			</div>
+			<div class="col-md-6 col-xs-3">
+				<span id="usernameTxt" class="badge"></span>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-6 col-xs-3">
+				<p class="badge">Api Key</p>
+			</div>
+			<div class="col-md-6 col-xs-3">
+				<span id="apiKeyTxt" class="badge"></span>
+			</div>
+		</div>
+
+
+
+
+
+
 
 	</div>
 	<!-- /.container -->
@@ -113,11 +136,15 @@
 	<script src="js/jquery.js"></script>
 
 
+	<script src="js/js.cookie.js"></script>
+
 	<!-- Bootstrap Core JavaScript -->
 	<script src="js/bootstrap.min.js"></script>
 
 
 	<script src="js/facebook.js"></script>
+	
+	<script src="js/index.js"></script>
 
 	<!-- 	<script src="js/execercise-app.js"></script> -->
 
