--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -37,6 +37,9 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-inverse navbar-fixed-bottom"
 		role="navigation">
+
+
+
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -55,6 +58,10 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="calculators.html">Calculators</a></li>
 					<li><a href="log.html">Log</a></li>
+					<li><a class="fb-login-button" data-max-rows="1"
+						data-size="large" data-show-faces="false"
+						data-auto-logout-link="true" onlogin="facebookLoginHandler();"
+						data-scope="basic_info,public_profile,email"></a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -170,10 +177,9 @@
 	<script src="js/bootstrap.min.js"></script>
 
 
-	<!--<script src="js/facebook.js"></script> -->
+	<script src="js/facebook.js"></script>
 
-	<!-- 	<script src="js/execercise-app.js"></script> -->
 
-	<script src="js/calculators.js"></script>
+	<script src="js/log.js"></script>
 </body>
 </html>
